Bug 489921 - [refactoring] Replace Number constructor call by valueOf
Change-Id: I4fd703f151deb2eac67c90e9a52a6ba27276aa40
Signed-off-by: Karsten Thoms <karsten.thoms@itemis.de>